main view model started

--- a/DoomFileManagerX/Views/MainWindow.axaml
+++ b/DoomFileManagerX/Views/MainWindow.axaml
@@ -6,7 +6,7 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="DoomFileManagerX.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
-        Title="DoomFileManagerX">
+        Title="{Binding WindowHeader}">
 
     <Design.DataContext>
         <vm:MainWindowViewModel/>
