--- a/DoomFileManagerX/Views/MainWindow.axaml
+++ b/DoomFileManagerX/Views/MainWindow.axaml
@@ -24,16 +24,46 @@
 			</Button>
 		</TreeDataTemplate>
 	</Window.Resources>
-	<StackPanel>
-		<TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-		<TreeView BorderThickness="0" 
-				  Items="{Binding RootChildren}" 
-				  ItemTemplate="{StaticResource TreeTemplate}">
-			<TreeView.Styles>
-				<Style Selector="TreeViewItem">
-					<Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
-				</Style>
-			</TreeView.Styles>
-		</TreeView>
-	</StackPanel>
+	<Grid x:Name="MainGrid">
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="*"/>
+		</Grid.RowDefinitions>
+		<StackPanel Grid.Row="0" Margin="5" Orientation="Horizontal">
+			<Label Content="Выбранный путь: " FontSize="12"/>
+			<TextBlock FontSize="12" Padding="5" Text="{Binding SelectedPath, Mode=OneTime}"/>
+		</StackPanel>
+		<Grid Row="1">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="*"/>
+				<ColumnDefinition Width="*"/>
+			</Grid.ColumnDefinitions>
+
+			<!-- Left Plane one tree with combobox RootItems,.. -->
+			<StackPanel Grid.Column="0">
+				<Grid>
+					<Grid.RowDefinitions>
+						<RowDefinition Height="*"/>
+						<RowDefinition Height="Auto"/>
+					</Grid.RowDefinitions>
+
+					<StackPanel>
+						<TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+						<TreeView BorderThickness="0"
+								  Items="{Binding RootChildren}"
+								  ItemTemplate="{StaticResource TreeTemplate}">
+							<TreeView.Styles>
+								<Style Selector="TreeViewItem">
+									<Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
+								</Style>
+							</TreeView.Styles>
+						</TreeView>
+					</StackPanel>
+				</Grid>
+			</StackPanel>
+			<StackPanel Grid.Column="1" >
+				
+			</StackPanel>
+		</Grid>		
+	</Grid>
 </Window>
