--- a/DoomFileManagerX/Views/MainWindow.axaml
+++ b/DoomFileManagerX/Views/MainWindow.axaml
@@ -30,8 +30,8 @@
 			<RowDefinition Height="*"/>
 		</Grid.RowDefinitions>
 		<StackPanel Grid.Row="0" Margin="5" Orientation="Horizontal">
-			<Label Content="Выбранный путь: " FontSize="12"/>
-			<TextBlock FontSize="12" Padding="5" Text="{Binding SelectedPath, Mode=OneTime}"/>
+			<Label Content="Выбранный путь: " FontSize="16"/>
+			<TextBlock FontSize="12" Padding="5" Text="{Binding SelectedPath, Mode=OneWay}"/>
 		</StackPanel>
 		<Grid Row="1">
 			<Grid.ColumnDefinitions>
@@ -48,16 +48,17 @@
 					</Grid.RowDefinitions>
 
 					<StackPanel>
-						<TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-						<TreeView BorderThickness="0"
-								  Items="{Binding RootChildren}"
-								  ItemTemplate="{StaticResource TreeTemplate}">
-							<TreeView.Styles>
-								<Style Selector="TreeViewItem">
-									<Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
-								</Style>
-							</TreeView.Styles>
-						</TreeView>
+						<ScrollViewer VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Auto">						
+							<TreeView BorderThickness="0"
+									  Items="{Binding RootChildren}"
+									  ItemTemplate="{StaticResource TreeTemplate}">
+								<TreeView.Styles>
+									<Style Selector="TreeViewItem">
+										<Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
+									</Style>
+								</TreeView.Styles>
+							</TreeView>						
+						</ScrollViewer>
 					</StackPanel>
 				</Grid>
 			</StackPanel>
