--- a/DoomFileManagerX/Views/MainWindow.axaml
+++ b/DoomFileManagerX/Views/MainWindow.axaml
@@ -4,6 +4,7 @@
 		xmlns:mod="using:DoomFileManagerX.Models"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		xmlns:teast="clr-namespace:Teast.Controls;assembly=Teast.Controls.GroupBox"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="DoomFileManagerX.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
@@ -14,13 +15,14 @@
 			  ToolTip.Tip="{Binding Path=FullPathName, Mode=OneTime}"
 			  Command="{Binding Path=DataContext.SelectedPathFromTreeCommand, 
                    RelativeSource = {RelativeSource FindAncestor, AncestorType={x:Type Window}}}"
-			  CommandParameter="{Binding FullPathName}"
-        
+			  CommandParameter="{Binding FullPathName}"        
 			  Background="{x:Null}" BorderBrush="{x:Null}" Padding="0" Height="20"
-			  Focusable="False" ClickMode="Press">				
-				<StackPanel Orientation="Horizontal" Margin="0" VerticalAlignment="Stretch" >					
-					<TextBlock Margin="5,0,0,0" Text="{Binding VisibleName, Mode=OneTime}"/>
-				</StackPanel>
+			  Focusable="False" ClickMode="Press"			  
+			  Content="{Binding VisibleName, Mode=OneTime}"
+			  HorizontalAlignment="Stretch">
+				<!--<StackPanel Orientation="Horizontal" Margin="0" VerticalAlignment="Stretch" >-->
+				<!--	<TextBlock Margin="5,0,0,0" Text="{Binding VisibleName, Mode=OneTime}"/>-->
+				<!--</StackPanel>-->
 			</Button>
 		</TreeDataTemplate>
 	</Window.Resources>
@@ -37,33 +39,25 @@
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="*"/>
 				<ColumnDefinition Width="*"/>
-			</Grid.ColumnDefinitions>
-
-			<!-- Left Plane one tree with combobox RootItems,.. -->
+			</Grid.ColumnDefinitions>			
 			<StackPanel Grid.Column="0">
 				<Grid>
 					<Grid.RowDefinitions>
 						<RowDefinition Height="*"/>
 						<RowDefinition Height="Auto"/>
-					</Grid.RowDefinitions>
-
-					<StackPanel>
-						<ScrollViewer VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Auto">						
-							<TreeView BorderThickness="0"
-									  Items="{Binding RootChildren}"
-									  ItemTemplate="{StaticResource TreeTemplate}">
-								<TreeView.Styles>
-									<Style Selector="TreeViewItem">
-										<Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
-									</Style>
-								</TreeView.Styles>
-							</TreeView>						
-						</ScrollViewer>
-					</StackPanel>
+					</Grid.RowDefinitions>					
+						<TreeView BorderThickness="3,3,3,3"
+								  Items="{Binding RootChildren}"
+								  ItemTemplate="{StaticResource TreeTemplate}">
+							<TreeView.Styles>
+								<Style Selector="TreeViewItem">
+									<Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
+								</Style>								
+							</TreeView.Styles>
+						</TreeView>					
 				</Grid>
 			</StackPanel>
-			<StackPanel Grid.Column="1" >
-				
+			<StackPanel Grid.Column="1" >				
 			</StackPanel>
 		</Grid>		
 	</Grid>
