--- a/DoomFileManagerX/View/FolderTreeView.xaml
+++ b/DoomFileManagerX/View/FolderTreeView.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:local="clr-namespace:DoomFileManagerX.View"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
@@ -24,6 +25,11 @@
 								  VerticalAlignment="Stretch"
 								ItemsSource="{Binding Path=RootChildren}"								  
 								ItemTemplate="{StaticResource TreeTemplate}">
+        <i:Interaction.Triggers>
+            <i:EventTrigger EventName="SelectedItemChanged">
+                <i:InvokeCommandAction Command="{Binding TreeClickEventCommand}" CommandParameter="argument"/>
+            </i:EventTrigger>
+        </i:Interaction.Triggers>
         <TreeView.ItemContainerStyle>
             <Style TargetType="{x:Type TreeViewItem}">
                 <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
