--- a/DoomFileManagerXAvalonia/Views/MainWindow.axaml
+++ b/DoomFileManagerXAvalonia/Views/MainWindow.axaml
@@ -4,7 +4,7 @@
 		xmlns:mod="using:DoomFileManagerX.Models"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-		xmlns:teast="clr-namespace:Teast.Controls;assembly=Teast.Controls.GroupBox"
+		xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="DoomFileManagerX.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
@@ -15,14 +15,13 @@
 			  ToolTip.Tip="{Binding Path=FullPathName, Mode=OneTime}"
 			  Command="{Binding Path=DataContext.SelectedPathFromTreeCommand, 
                    RelativeSource = {RelativeSource FindAncestor, AncestorType={x:Type Window}}}"
-			  CommandParameter="{Binding FullPathName}"        
+			  CommandParameter="{Binding FullPathName}"
+        
 			  Background="{x:Null}" BorderBrush="{x:Null}" Padding="0" Height="20"
-			  Focusable="False" ClickMode="Press"			  
-			  Content="{Binding VisibleName, Mode=OneTime}"
-			  HorizontalAlignment="Stretch">
-				<!--<StackPanel Orientation="Horizontal" Margin="0" VerticalAlignment="Stretch" >-->
-				<!--	<TextBlock Margin="5,0,0,0" Text="{Binding VisibleName, Mode=OneTime}"/>-->
-				<!--</StackPanel>-->
+			  Focusable="False" ClickMode="Press">				
+				<StackPanel Orientation="Horizontal" Margin="0" VerticalAlignment="Stretch" >					
+					<TextBlock Margin="5,0,0,0" Text="{Binding VisibleName, Mode=OneTime}"/>
+				</StackPanel>
 			</Button>
 		</TreeDataTemplate>
 	</Window.Resources>
@@ -32,41 +31,45 @@
 			<RowDefinition Height="*"/>
 		</Grid.RowDefinitions>
 		<StackPanel Grid.Row="0" Margin="5" Orientation="Horizontal">
-			<Label Content="Выбранный путь: " FontSize="16"/>
-			<TextBlock FontSize="12" Padding="5" Text="{Binding SelectedPath, Mode=OneWay}"/>
+			<Label Content="Выбранный путь: " FontSize="12"/>
+			<TextBlock FontSize="12" Padding="5" Text="{Binding SelectedPath, Mode=OneTime}"/>
 		</StackPanel>
 		<Grid Row="1">
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="*"/>
 				<ColumnDefinition Width="*"/>
-			</Grid.ColumnDefinitions>			
+			</Grid.ColumnDefinitions>
+
+			<!-- Left Plane one tree with combobox RootItems,.. -->
 			<StackPanel Grid.Column="0">
 				<Grid>
 					<Grid.RowDefinitions>
 						<RowDefinition Height="*"/>
 						<RowDefinition Height="Auto"/>
 					</Grid.RowDefinitions>
-					<StackPanel Grid.Column="0">
-						<TreeView ScrollViewer.HorizontalScrollBarVisibility="Visible"
-								  
-								  VerticalAlignment="Stretch"
-								Items="{Binding RootChildren}"								  
-								ItemTemplate="{StaticResource TreeTemplate}">
+
+					<StackPanel>
+						<TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+						<TreeView BorderThickness="0"
+								  Items="{Binding RootChildren}"
+								  ItemTemplate="{StaticResource TreeTemplate}">
+							<i:Interaction.Triggers>
+								<i:EventTrigger EventName="SelectedItemChanged">
+									<i:InvokeCommandAction Command="{Binding TreeClickEventCommand}" CommandParameter="argument"/>
+								</i:EventTrigger>
+							</i:Interaction.Triggers>
 							<TreeView.Styles>
 								<Style Selector="TreeViewItem">
 									<Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
-								</Style>								
+								</Style>
 							</TreeView.Styles>
-						</TreeView>	
-					</StackPanel>					
+						</TreeView>
+					</StackPanel>
 				</Grid>
 			</StackPanel>
-			<StackPanel Grid.Column="1" >				
-				<ItemsRepeater ScrollViewer.HorizontalScrollBarVisibility="Visible"
-							Items="{Binding RootChildren}">
-
-				</ItemsRepeater>
-			</StackPanel>			
+			<StackPanel Grid.Column="1" >
+				
+			</StackPanel>
 		</Grid>		
 	</Grid>
 </Window>
