--- a/Tree+List+View/MainWindow.xaml
+++ b/Tree+List+View/MainWindow.xaml
@@ -87,8 +87,12 @@
             <ColumnDefinition/>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
-
+        <StackPanel Grid.Column="3">
+            <Slider x:Name="slider1" Minimum="1" Maximum="100"/>
+            <TextBox Text="{Binding ElementName=slider1, Path=Value, Mode=TwoWay}"/>
+        </StackPanel>
         <TreeView Name="tree" Margin="5" Grid.Row="0" Grid.Column="0"
                   ItemsSource="{Binding}" SelectedItemChanged="tree_SelectedItemChanged">
             <TreeView.ItemTemplate>
