--- a/DoomFileManagerX/View/FolderTreeView.xaml
+++ b/DoomFileManagerX/View/FolderTreeView.xaml
@@ -2,33 +2,33 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"              
              xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:local="clr-namespace:DoomFileManagerX.View"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
         <HierarchicalDataTemplate x:Key="TreeTemplate" ItemsSource="{Binding Path=Children}" >
-            <Button
-			  ToolTip="{Binding Path=FullPathName, Mode=OneTime}"
-			  Command="{Binding Path=DataContext.SelectedPathFromTreeCommand, 
-                    RelativeSource = {RelativeSource FindAncestor, AncestorType={x:Type Window}}}"
-			  CommandParameter="{Binding FullPathName}"        
-			  Background="{x:Null}" BorderBrush="{x:Null}" Padding="0" Height="20"
-			  Focusable="False" ClickMode="Press"			  
-			  Content="{Binding VisibleName, Mode=OneTime}"
-			  HorizontalAlignment="Stretch">               
-            </Button>
+            <StackPanel Orientation="Horizontal" Margin="0" VerticalAlignment="Stretch" >
+                <Image
+                    Source="{Binding Path=MyIcon, Mode=OneTime}"
+                    Width="20"
+                    Height="20"
+                    Stretch="Fill"/>
+                <TextBlock Text="{Binding VisibleName, Mode=OneTime}"
+                       HorizontalAlignment="Stretch">
+                </TextBlock>
+            </StackPanel>            
         </HierarchicalDataTemplate>
     </UserControl.Resources>
-    <TreeView ScrollViewer.VerticalScrollBarVisibility="Visible"
+    <TreeView x:Name="treeView"
+            ScrollViewer.VerticalScrollBarVisibility="Visible"
 								  VerticalAlignment="Stretch"
 								ItemsSource="{Binding Path=RootChildren}"								  
-								ItemTemplate="{StaticResource TreeTemplate}">
-        <!--https://github.com/JonghoL/EventBindingMarkup-->
+								ItemTemplate="{StaticResource TreeTemplate}">        
         <behaviors:Interaction.Triggers>
-            <behaviors:EventTrigger EventName="SelectedItemChanged">
-                <behaviors:InvokeCommandAction Command="{Binding TreeClickEventCommand}" CommandParameter="argument"/>
+            <behaviors:EventTrigger EventName="SelectedItemChanged" >
+                <behaviors:InvokeCommandAction Command="{Binding TreeClickEventCommand}" CommandParameter="{Binding ElementName=treeView}" />
             </behaviors:EventTrigger>
         </behaviors:Interaction.Triggers>
         <TreeView.ItemContainerStyle>
