--- a/DoomFileManagerX/View/DetailsListView.xaml
+++ b/DoomFileManagerX/View/DetailsListView.xaml
@@ -48,7 +48,8 @@
             </Border>
         </DataTemplate>
     </UserControl.Resources>
-    <ListView Name="ListView" ItemsSource="{Binding Path=Detail}"></ListView> -->   
+    <ListView Name="ListView" ItemsSource="{Binding Path=Detail}"></ListView> -->
+    <Border Margin="3" BorderBrush="DarkGray" Background="LightCyan" BorderThickness="2" CornerRadius="5">
         <Grid Margin="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
@@ -72,7 +73,7 @@
             <TextBlock Grid.Row="2" Grid.Column="0"
                                 Text="Последнее изменение:" Foreground="Black"/>
             <TextBlock Grid.Row="2" Grid.Column="1"
-                                Text="{Binding Detail.LastModifiedTime, Mode=OneWay}" Foreground="Black"/>            
+                                Text="{Binding Detail.LastModifiedTime, Mode=OneWay}" Foreground="Black"/>
             <TextBlock Grid.Row="3" Grid.Column="0"
                                 Text="Атрибуты:" Foreground="Black"/>
             <TextBlock Grid.Row="3" Grid.Column="1"                             
@@ -81,5 +82,6 @@
                                 Text="Общий объём:" Foreground="Black"/>
             <TextBlock Grid.Row="4" Grid.Column="1"
                                 Text="{Binding Detail.FullSize, Mode=OneWay}" Foreground="Black"/>
-        </Grid>    
+        </Grid>
+    </Border>
 </UserControl>
