--- a/DoomFileManagerX/View/DetailsListView.xaml
+++ b/DoomFileManagerX/View/DetailsListView.xaml
@@ -6,57 +6,15 @@
              xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:local="clr-namespace:DoomFileManagerX.View"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <!--<UserControl.Resources>
-        <DataTemplate x:Key="folderTreeTemplate">
-            <Border Margin="3" BorderThickness="2" CornerRadius="5">
-                <Grid Margin="2">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                    </Grid.RowDefinitions>
-                    <TextBlock Grid.Row="0" Grid.Column="0"
-                                Text="Путь:" Foreground="Black"/>
-                    <TextBlock Grid.Row="0" Grid.Column="1"
-                                Text="{Binding FullPathName}" Foreground="Black"/>
-                    <TextBlock Grid.Row="1" Grid.Column="0"
-                                Text="Дата создания:" Foreground="Black"/>
-                    <TextBlock Grid.Row="1" Grid.Column="1"
-                                Text="{Binding CreationTime}" Foreground="Black"/>
-                    <TextBlock Grid.Row="2" Grid.Column="0"
-                                Text="Последнее изменение:" Foreground="Black"/>
-                    <TextBlock Grid.Row="2" Grid.Column="1"
-                                Text="{Binding LastModifiedTime}" Foreground="Black"/>
-                    <TextBlock Grid.Row="3" Grid.Column="0"
-                                Text="Последнее изменение:" Foreground="Black"/>
-                    <TextBlock Grid.Row="3" Grid.Column="1"
-                                Text="Атрибуты:" Foreground="Black"/>
-                    <TextBlock Grid.Row="3" Grid.Column="1"                             
-                                Text="{Binding Attributes}" Foreground="Black"/>
-                    <TextBlock Grid.Row="4" Grid.Column="0"
-                                Text="Общий объём:" Foreground="Black"/>
-                    <TextBlock Grid.Row="4" Grid.Column="1"
-                                Text="{Binding FullSize}" Foreground="Black"/>
-                </Grid>
-            </Border>
-        </DataTemplate>
-    </UserControl.Resources>
-    <ListView Name="ListView" ItemsSource="{Binding Path=Detail}"></ListView> -->
-    <Border Margin="3" BorderBrush="DarkGray" Background="LightCyan" BorderThickness="2" CornerRadius="5">
+             d:DesignHeight="300" d:DesignWidth="300">    
+    <Border Margin="3" BorderBrush="DarkGray" Background="LightGray" BorderThickness="2" CornerRadius="5" Height="200" VerticalAlignment="Top">
         <Grid Margin="2">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
+                <ColumnDefinition Width="150"/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition/>
+                <RowDefinition Height="50"/>
                 <RowDefinition/>
                 <RowDefinition/>
                 <RowDefinition/>
@@ -65,7 +23,7 @@
             <TextBlock Grid.Row="0" Grid.Column="0"
                                 Text="Путь:" Foreground="Black"/>
             <TextBlock Grid.Row="0" Grid.Column="1"
-                                Text="{Binding Detail.FullPathName, Mode=OneWay}" Foreground="Black"/>
+                                Text="{Binding Detail.FullPathName, Mode=OneWay}" Foreground="Black" TextWrapping="Wrap"/>            
             <TextBlock Grid.Row="1" Grid.Column="0"
                                 Text="Дата создания:" Foreground="Black"/>
             <TextBlock Grid.Row="1" Grid.Column="1"
@@ -81,7 +39,7 @@
             <TextBlock Grid.Row="4" Grid.Column="0"
                                 Text="Общий объём:" Foreground="Black"/>
             <TextBlock Grid.Row="4" Grid.Column="1"
-                                Text="{Binding Detail.FullSize, Mode=OneWay}" Foreground="Black"/>
+                                Text="{Binding Detail.FullSize, IsAsync=True, FallbackValue=|Расчитывается...|}" Foreground="Black"/>
         </Grid>
     </Border>
 </UserControl>
