--- a/DoomFileManagerX/View/MainWindow.xaml
+++ b/DoomFileManagerX/View/MainWindow.xaml
@@ -18,7 +18,7 @@
         
         <StackPanel Grid.Row="0" Margin="5" Orientation="Horizontal">
             <Label Content="Текущая папка: " FontSize="12"/>
-            <TextBlock FontSize="12" Padding="5" Text="{Binding SelectedPath}"/>
+            <TextBlock FontSize="12" Padding="5" Text="{Binding Detail.FullPathName}"/>
         </StackPanel>
         
         <Grid Row="1">
@@ -33,7 +33,13 @@
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-                    <vw:FolderTreeView x:Name="mainTree" Grid.Row="0"/>                    
+                    <vw:FolderTreeView x:Name="mainTree" Grid.Row="0"/>
+                    <StackPanel Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Left" Orientation="Horizontal">
+                        <Button Content="Копировать" Width="75" Margin="5,5,5,5"></Button>
+                        <Button Content="Удалить" Width="50" Margin="5,5,5,5"></Button>
+                        <Button Content="Переименовать" Width="95" Margin="5,5,5,5"></Button>
+                        <Button Content="Вставить" Width="55" Margin="5,5,5,5"></Button>
+                    </StackPanel>
                 </Grid>
             </GroupBox>
             
